# DerryVoiceChange

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/derryvoicechangeprac/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_derryvoicechangeprac_JavaMainActivity.h  native-lib.cpp
app/src/main/java/com/example/derryvoicechangeprac/: JavaMainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_java_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/derryvoicechangeprac/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
